[tool.poetry]
name = "infra-access-lib"
version = "0.1.0"
description = "Library for infrastructure accessibility analysis"
authors = ["Daria <pyryseva03@gmail.com>"]
# readme = "README.md"
packages = [{ include = "infra_access_lib" }]
homepage = "https://example.com"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
geopandas = "^1.1.3"
shapely = "^2.1.2"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://example.com"